--- a/QQ_src/build.gradle
+++ b/QQ_src/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/PhotoView.jar')
+    compile files('libs/asmack.jar')
 }
